# Shellshock

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  actions.h  asset_loader.cpp  asset_loader.h  camera.cpp  camera.h  editor.cpp  editor.h  log.h  main.cpp  metadata.h  model.h  pch.h  shaders.cpp  shaders.h  texture.cpp  texture.h  texture_wic.cpp  texture_wic.h  utility.h
src/gui/: gui.cpp  gui.h
src/shaders/: model.hlsl  textured.hlsl
